--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ body {
   transition: background 4s cubic-bezier(.19,1,.22,1);
 }
 
-/* CAPA DE FONDO SUAVE */
 body::after {
   content:"";
   position: fixed;
@@ -31,14 +30,10 @@ body::after {
   z-index: -1;
 }
 
-/* CUANDO SE ABRE LA CARTA */
 body.opened::after {
   opacity: 1;
 }
 
-/* body.opened { background: radial-gradient(circle at top, #2a2a2a, #0b0b0b); }  <-- línea eliminada */
-
-/* resto del CSS original */
 .hint {
   color: white;
   font-size: 20px;
@@ -217,3 +212,6 @@ document.getElementById("envelopeContainer").onclick = function() {
 
 </body>
 </html>
+
+
+<!-- Salaverga debi comentar esta webada, luego se me va a olvidar que sirve cada cosa XDDD -->
