--- a/index.html
+++ b/index.html
@@ -152,30 +152,34 @@ body.opened::after {
 </div>
 
 <script>
-const message = `Holi mamorororororo.
+const message = `Holi mamorororororo 💌
 
-A traves de esta carta quise mostrarte mi mundo.
+A través de esta carta quise mostrarte mi mundo,
+mi pequeño universo donde todo se trata de ti.
 
-El otro dia te mostre como con palabras hacia muchas cosas,
-y ahora quise enseñarte como esas palabras pueden hacer
-algo lindo para ti, ya que mi mundo es este.
+El otro día te mostré cómo con palabras puedo hacer muchas cosas,
+y hoy quise enseñarte cómo esas mismas palabras
+pueden convertirse en algo bonito para ti,
+porque tu eres mi mundo, y mi todo.
 
-Todo lo que estas viendo lo hice yo mismo.
+Cada detalle que ves aquí lo hice yo mismo,
+pensando en ti, en nosotros, en cada momento que aún nos espera.
 
-Te amo mamor.
+Te amo, mamor 💖
 
-Se que es poquisimo tiempo lo que literalmente llevamos,
-pero igualmente eso no impedira que pueda
-hacerte cosas como estas,
-donde pueda mostrarte de distintas maneras cuanto te amo
-y cuanto puedo amarte de aqui para siempre.
+Sé que llevamos poquísimo tiempo,
+pero eso nunca impedirá que pueda
+crear cosas así para ti,
+formas distintas de mostrarte cuánto te amo
+y cuánto puedo amarte, hoy y siempre.
 
-Se que esto no esta a la altura de las ultimas cosas
-que te llegue a hacer en su momento,
-pero igualmente quise darte algo
-porque tu representas todo mi mundo.
+Sé que esto no llega a la altura de las cosas
+que antes te llegué a hacer,
+pero quise darte algo de mi mundo,
+porque tú representas todo lo que importa para mí.
 
-Te amo y siempre lo haré.`;
+Te amo, y siempre lo haré 🩷`;
+
 
 let charIndex = 0;
 const box = document.querySelector('.text-container');
